--- a/libs/demo-ui/src/lib/date-picker/date-picker.component.html
+++ b/libs/demo-ui/src/lib/date-picker/date-picker.component.html
@@ -1,12 +1,31 @@
 <div class="container">
-  <div class="row">
-    <div class=""col-12>
-      <h1 class="mb-3">Date Picker</h1>
-      <rex-lib-datepicker [minDate] = "minDate"
-                          [maxDate] = "maxDate"
-                          [isDisabled] = "isDisabled"
-                          [formGroup]="datePickerFormGroup"
-                          formControlName="date"></rex-lib-datepicker>
+  <div class="row d-flex justify-content-around">
+    <div class="col-10">
+      <div class="mb-4">
+        <h1 class="mb-3">Date Picker</h1>
+        <rex-lib-datepicker [minDate]="minDate"
+                            [maxDate]="maxDate"
+                            [isDisabled]="isDisabled"
+                            [formGroup]="datePickerFormGroup"
+                            errorMessage="Enter a valid date"
+                            label="Date"
+                            subLabel="Example: 2020-01-31"
+                            formControlName="date">
+        </rex-lib-datepicker>
+      </div>
+      <div>
+        <h1 class="mb-3">Date Range Picker</h1>
+        <rex-lib-datepicker [minDate]="minDate"
+                            [maxDate]="maxDate"
+                            [isDisabled]="isDisabled"
+                            [formGroup]="datePickerFormGroup"
+                            [rangepicker]="true"
+                            errorMessage="Enter a valid date range"
+                            label="Date Range"
+                            subLabel="Example: 2020-01-31 - 2020-01-31"
+                            formControlName="dateRange">
+        </rex-lib-datepicker>
+      </div>
     </div>
   </div>
 </div>
